--- a/client/src/components/dedicated/DonorsList/DonorsList.module.scss
+++ b/client/src/components/dedicated/DonorsList/DonorsList.module.scss
@@ -21,6 +21,10 @@
     font-size: $font-size-14;
     font-weight: $font-weight-semibold;
     color: $color-octant-grey6;
+    text-align: left;
+    line-height: 3.2rem;
+    padding-bottom: 4.4rem;
+    border-bottom: 0.1rem solid $color-octant-grey2;
   }
 
   .divider {
@@ -37,7 +41,7 @@
     color: $color-octant-dark;
     font-size: $font-size-16;
     font-weight: $font-weight-bold;
-    margin-bottom: 2.4rem;
+    margin-bottom: 2rem;
     padding-bottom: 1.4rem;
     border-bottom: 0.1rem solid $color-octant-grey2;
 
@@ -56,9 +60,10 @@
       height: 2.4rem;
       min-width: 3.2rem;
       font-size: $font-size-12;
-      color: $color-octant-dark;
-      background: $color-octant-grey2;
+      color: $color-white;
+      background: $color-octant-grey6;
       border-radius: $border-radius-10;
+      line-height: 100%;
     }
   }
 }
