--- a/client/src/components/core/BoxRounded/Sections/Sections.module.scss
+++ b/client/src/components/core/BoxRounded/Sections/Sections.module.scss
@@ -20,7 +20,7 @@
   display: flex;
   align-items: center;
   font-size: $font-size-14;
-  color: $color-octant-grey6;
+  color: $color-octant-dark;
   margin-right: 1.6rem;
 }
 
