OCT-812 Implement Project archives

--- a/client/src/components/dedicated/ButtonAddToAllocate/ButtonAddToAllocate.module.scss
+++ b/client/src/components/dedicated/ButtonAddToAllocate/ButtonAddToAllocate.module.scss
@@ -6,10 +6,17 @@
         fill: $color-octant-orange;
       }
 
-      &[data-is-initial-load-done="true"] {
+      &[data-is-initial-load-done='true'] {
         animation-name: scale1;
         animation-duration: $transition-time-1;
       }
+    }
+  }
+
+  &.isArchivedProposal.isAllocatedTo {
+    svg circle {
+      stroke: $color-octant-grey6;
+      fill: $color-octant-grey6;
     }
   }
 }
