--- a/client/src/components/dedicated/ProposalRewards/ProposalRewards.module.scss
+++ b/client/src/components/dedicated/ProposalRewards/ProposalRewards.module.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
 
   .separator {
-    margin: 0 0 2.4rem 0;
+    margin: 0 0 1.2rem 0;
   }
 
   .line {
@@ -32,6 +32,10 @@
 
         .number {
           color: $color-black;
+
+          &.isArchivedProposal {
+            color: $color-octant-grey6;
+          }
         }
       }
 
@@ -45,17 +49,20 @@
 
       .label {
         font-size: $font-size-12;
+        height: 2.4rem;
+        display: flex;
+        align-items: center;
       }
 
       .number {
-        font-size: $font-size-18;
-
-        @media #{$tablet-down} {
-          font-size: $font-size-16;
-        }
+        font-size: $font-size-16;
 
         &.isBelowCutOff {
           color: $color-octant-orange;
+        }
+
+        &.isArchivedProposal {
+          color: $color-octant-grey6;
         }
       }
     }
