--- a/client/src/views/ProposalsView/ProposalsView.module.scss
+++ b/client/src/views/ProposalsView/ProposalsView.module.scss
@@ -1,24 +1,12 @@
-$elementMargin: 1.6rem;
-
-.list {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  justify-content: space-between;
-}
-
-.element {
-  margin-bottom: $elementMargin;
-
-  @media #{$desktop-up} {
-    @include flexBasisGutter(2, $elementMargin);
-  }
-}
-
 .tip {
   margin-bottom: 1.6rem;
 
   @media #{$desktop-up} {
     margin-bottom: 2.8rem;
   }
+}
+
+.loaderWrapper {
+  display: flex;
+  justify-content: center;
 }
