Apply 1 suggestion(s) to 1 file(s)

--- a/client/src/components/core/Slider/Slider.module.scss
+++ b/client/src/components/core/Slider/Slider.module.scss
@@ -62,7 +62,7 @@ $thumbSizeMobile: $heightRootMobile;
   background: $color-white;
   border-radius: 50%;
   cursor: pointer;
-  filter: drop-shadow(rgba(0, 0, 0, 0.15) 0px 0px 5px);
+  filter: drop-shadow(rgba(0, 0, 0, 0.15) 0 0 0.5rem);
 
   &:focus-visible {
     outline: none;
