--- a/client/src/components/dedicated/History/HistoryItem/HistoryItem.module.scss
+++ b/client/src/components/dedicated/History/HistoryItem/HistoryItem.module.scss
@@ -1,8 +1,9 @@
 .box {
-  padding: 1.6rem 0;
+  padding: 2.1rem 0;
+  border-radius: 0;
 
-  &:not(:first-child) {
-    margin: 1.6rem auto 0 auto;
+  &:not(:last-child) {
+    border-bottom: 0.1rem solid $color-octant-grey12;
   }
 }
 
@@ -15,12 +16,6 @@
 
 .title {
   font-size: $font-size-14;
-}
-
-.subtitle {
-  font-size: $font-size-12;
-  color: $color-octant-grey13;
-  margin-top: 0.3rem;
 }
 
 .values {
