--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -29,3 +29,4 @@ $color-octant-red2: #e23600;
 $color-octant-orange: #ff6157;
 $color-octant-orange2: #ff9501;
 $color-octant-orange3: #FF9601;
+$color-octant-orange4: #F6C54B;
