OCT-985 Fix lack of "no donations" message in donors sections

--- a/client/src/components/core/Button/Button.module.scss
+++ b/client/src/components/core/Button/Button.module.scss
@@ -73,6 +73,10 @@ $paddingVertical: 1rem;
     box-shadow: $box-shadow-1;
     min-height: 0;
     width: auto;
+
+    &.isDisabled {
+      color: $color-octant-grey2;
+    }
   }
 
   &iconVertical {
