OCT-977 Fix manual allocation modal layouts

--- a/client/src/components/core/Modal/Modal.module.scss
+++ b/client/src/components/core/Modal/Modal.module.scss
@@ -33,6 +33,7 @@ $desktop-width: 47.2rem;
         .header {
           font-size: $font-size-20;
           margin: 2.4rem $modalVariantSmallPaddingDesktop !important;
+          line-height: initial;
         }
       }
     }
