--- a/client/src/components/dedicated/AllocationItem/AllocationItemSkeleton/AllocationItemSkeleton.module.scss
+++ b/client/src/components/dedicated/AllocationItem/AllocationItemSkeleton/AllocationItemSkeleton.module.scss
@@ -1,8 +1,15 @@
+$heightDesktop: 3.2rem;
+$heightMobile: 2.4rem;
+
 .root {
   display: flex;
   height: 12.8rem;
   width: 100%;
   padding: 1.6rem 4.4rem 1.6rem 2.4rem;
+
+  @media #{$tablet-down} {
+    height: 11.2rem;
+  }
 }
 
 .column1 {
@@ -13,45 +20,57 @@
 
   .row {
     display: flex;
-    height: 4rem;
+    align-items: center;
+    height: $heightDesktop;
     width: 100%;
 
     &:first-child {
       .rectangle {
-        width: 24rem;
+        width: 60%;
       }
     }
 
     .circle {
       @include skeleton();
-      height: 3.2rem;
-      width: 3.2rem;
+      height: $heightDesktop;
+      width: $heightDesktop;
+      min-width: $heightDesktop;
+      min-height: $heightDesktop;
       margin-right: 1.2rem;
       border-radius: 100%;
+
+      @media #{$tablet-down} {
+        display: none;
+      }
     }
 
     .rectangle {
       @include skeleton();
       height: 100%;
-      width: 40rem;
+      width: 100%;
     }
   }
 }
 
 .column2 {
   width: 12rem;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  justify-self: center;
+  justify-content: center;
 
   .rectangle {
     @include skeleton();
     width: 7.2rem;
-    height: 3.2rem;
+    height: $heightDesktop;
 
     &:first-child {
       margin-bottom: 0.8rem;
+    }
+
+    @media #{$tablet-down} {
+      height: $heightMobile;
     }
   }
 }
