--- a/client/src/components/core/Tooltip/Tooltip.module.scss
+++ b/client/src/components/core/Tooltip/Tooltip.module.scss
@@ -43,6 +43,16 @@
   }
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  z-index: $z-index-4;
+}
+
 .tooltip {
   text-align: left;
   position: absolute;
@@ -52,6 +62,7 @@
   justify-content: center;
   color: $color-white;
   font-weight: $font-weight-medium;
+  z-index: $z-index-5;
 
   &.variant--{
     &normal {
