--- a/client/src/styles/utils/_variables.scss
+++ b/client/src/styles/utils/_variables.scss
@@ -18,8 +18,9 @@ $transition-time-5: 0.15s;
 
 $z-index-2: 2;
 $z-index-3: 3;
-$z-index-4: 4; // overlays
-$z-index-5: 5; // modals
+$z-index-4: 4;
+$z-index-5: 5; // overlays
+$z-index-6: 6; // modals
 
 // distances
 $headerHeight: 7.2rem;
