OCT-986 Events in the history don't show up

--- a/client/src/components/dedicated/BudgetBox/BudgetBox.module.scss
+++ b/client/src/components/dedicated/BudgetBox/BudgetBox.module.scss
@@ -44,6 +44,13 @@
     left: 0;
   }
 
+  .skeleton {
+    @include skeleton();
+    height: 1.7rem;
+    width: 10rem;
+  }
+
+
   .budgetLabel {
     color: $color-octant-grey6;
   }
