--- a/client/src/components/core/BoxRounded/Sections/Sections.module.scss
+++ b/client/src/components/core/BoxRounded/Sections/Sections.module.scss
@@ -38,7 +38,7 @@
         font-size: $font-size-12;
       }
     }
-    &:not(&small) {
+    &standard {
       font-size: $font-size-14;
     }
   }
