feat: improve leverage info tooltip

--- a/client/src/components/core/Tooltip/Tooltip.module.scss
+++ b/client/src/components/core/Tooltip/Tooltip.module.scss
@@ -62,7 +62,7 @@
   align-items: center;
   justify-content: center;
   color: $color-white;
-  font-weight: $font-weight-medium;
+  font-weight: $font-weight-semibold;
   z-index: $z-index-6;
 
   &.variant-- {
