--- a/client/src/components/dedicated/AllocationItem/AllocationItem.module.scss
+++ b/client/src/components/dedicated/AllocationItem/AllocationItem.module.scss
@@ -13,14 +13,14 @@ $rowHeightMobile: 5.6rem;
   }
 }
 
-.nameAndEthNeeded {
+.nameAndRewards {
   display: flex;
   flex-direction: column;
   flex: 1;
   border-right: 0.1rem solid $color-octant-grey12;
 }
 
-.name, .ethNeeded {
+.name, .rewards {
   height: $rowHeightMobile;
 
   @media #{$desktop-up} {
@@ -55,37 +55,6 @@ $rowHeightMobile: 5.6rem;
 
   @media #{$desktop-up} {
     font-size: $font-size-16;
-  }
-}
-
-.ethNeeded {
-  width: 100%;
-  text-align: left;
-  padding: 0 2.7rem;
-  display: flex;
-  align-items: center;
-  color: $color-octant-dark;
-  font-size: $font-size-12;
-  font-weight: $font-weight-semibold;
-
-  &.isEpoch1 {
-    color: $color-octant-grey16;
-  }
-
-  .dot {
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50%;
-    background: $color-octant-orange;
-    margin-right: 1.4rem;
-
-    &.isDonationAboveThreshold {
-      background: $color-octant-green;
-    }
-
-    &.isEpoch1 {
-      background: $color-octant-grey16;
-    }
   }
 }
 
