--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -20,6 +20,8 @@ $color-octant-grey15: #bababa;
 $color-octant-grey16: #cdd1cd;
 $color-octant-grey17: #323232;
 $color-octant-green: #2d9b87;
+$color-octant-green-15: rgba(45, 155, 135, 0.15);
+$color-octant-green-50: rgba(45, 155, 135, 0.5);
 $color-octant-green2: #5b8a81;
 $color-octant-green3: #1d4558;
 $color-octant-green4: #d1e7e3;
@@ -28,4 +30,4 @@ $color-octant-red: #d0623f;
 $color-octant-red2: #e23600;
 $color-octant-orange: #ff6157;
 $color-octant-orange2: #ff9501;
-$color-octant-orange3: #FF9601;
+$color-octant-orange3: #ff9601;
