--- a/client/src/components/dedicated/History/HistoryTransactionLabel/HistoryTransactionLabel.module.scss
+++ b/client/src/components/dedicated/History/HistoryTransactionLabel/HistoryTransactionLabel.module.scss
@@ -5,7 +5,7 @@
   text-transform: uppercase;
   border-radius: $border-radius-04;
   padding: 0.2rem 0.5rem;
-  line-height: 0.02rem;
+  letter-spacing: 0.02rem;
 
   &.isFinalized {
     background: $color-octant-green;
