--- a/client/src/components/dedicated/ProjectAllocationDetailRow/ProjectAllocationDetailRow.module.scss
+++ b/client/src/components/dedicated/ProjectAllocationDetailRow/ProjectAllocationDetailRow.module.scss
@@ -1,3 +1,5 @@
+$height: 2.4rem;
+
 .root {
   align-self: stretch;
   display: flex;
@@ -13,7 +15,7 @@
 .skeleton {
   @include skeleton();
   width: 100%;
-  height: 1.6rem;
+  height: $height;
 }
 
 .imageAndName {
@@ -23,8 +25,8 @@
 
 .image {
   border-radius: 50%;
-  width: 2.4rem;
-  height: 2.4rem;
+  width: $height;
+  height: $height;
   margin-right: 0.8rem;
 
   @media #{$tablet-down} {
