OCT-1009 Align heights of Earn tiles with design

--- a/client/src/components/core/BoxRounded/BoxRounded.module.scss
+++ b/client/src/components/core/BoxRounded/BoxRounded.module.scss
@@ -92,8 +92,7 @@ $padding: 2.2rem;
   &.hasSections {
     color: $color-octant-dark;
     font-size: $font-size-16;
-    padding-top: 1.8rem;
-    padding-bottom: 1.8rem;
+    height: 5.6rem;
     margin: 0;
     border-bottom: 0.1rem solid $color-octant-grey4;
 
