feat & fix: RewardsCalculator, fiat input added & validation for more than 1B

--- a/client/src/components/core/InputText/InputText.module.scss
+++ b/client/src/components/core/InputText/InputText.module.scss
@@ -149,7 +149,7 @@
 .error {
   position: absolute;
   top: 100%;
-  left: 0;
+  right: 0;
   text-align: left;
   font-size: $font-size-10;
   color: $color-octant-orange;
