--- a/client/src/components/dedicated/ProposalsList/ProposalsList.module.scss
+++ b/client/src/components/dedicated/ProposalsList/ProposalsList.module.scss
@@ -41,4 +41,8 @@ $elementMargin: 1.6rem;
   height: 0.1rem;
   background-color: $color-octant-grey2;
   margin: 1.6rem 0;
+
+  &:first-child {
+    border-color: red;
+  }
 }
